objects/Employees__c.object
<CustomObject>
    <description>Employee Name</description>
    <fields>
        <fullName>Detail_Description__c</fullName>
        <label>Detail Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>18</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Values__c</fullName>
        <label>Number of Values</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RText__c</fullName>
        <label>RText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Employees</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>